src/pages/AppDetail/index.scss
@import "~scss/vars";

.section {
  margin-left: 64px;
  .title {
    margin-bottom: 16px;
    line-height: 21px;
    font-size: 18px;
    font-weight: 500;
    color: $N500;
  }
  .content {
    line-height: 24px;
    font-size: 14px;
    color: $N300;
  }
}

.introCard {
  padding: 32px;
  border-radius: 2px;
  margin-bottom: 84px;
  //background-color: $N0;
  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
}

.detailCard{
  margin-bottom: 24px;
  padding: 32px;
  //border-radius: 2px;
  //background-color: $N0;
  //box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
}

.versionItem{
  margin-bottom: 32px;
  .title{
    margin-bottom: 14px;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0;
    color: $N500;
  }
  .value, .value a{
    font-size: 14px;
    line-height: 1.14;
    color: $P75;
    word-break: break-all;
    word-wrap: break-word;
  }
  .linkItem {
    margin-top: 4px;
  }
}

.deployBtn {
  margin-top: 16px;
  width: 100%;
  box-shadow: 0 3px 4px 0 rgba(102, 38, 175, 0.2);
}

.versions{
  margin-top: 32px;
  overflow: scroll;
  &>p{
    margin-bottom: 12px;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 0;
    color: $N500;
  }
  li{
    line-height: 30px;
    font-size: 14px;
    color: $P75;
    .name{
      display: inline-block;
      max-width: 200px;
      @include textCut;
    }
    .time{
      float: right;
      color: $N300;
    }
  }
}

